fixed alignment

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ section{
     padding-top: 40px;
 }
 section .content{
-    width: 80%;
+    width: 90%;
     margin: 40px auto;
     font-family: poppins, sans-serif;
 }
